--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ reth-transaction-pool = { path = "../reth/crates/transaction-pool" }
 reth-stages-api = { path = "../reth/crates/stages/api" }
 reth-tokio-util = { path = "../reth/crates/tokio-util" }
 
+# revm dependencies have to be specd with `=` for the precise version
+# otherwise compilation breaks for reth-rpc-eth-api
 revm = { version = "=12.1.0", features = [
     "std",
     "secp256k1",
@@ -55,5 +57,15 @@ tokio = { version = "1.21", default-features = false }
 tokio-stream = "0.1.11"
 serde_json = "1.0.94"
 eyre = "0.6"
-tracing = "=0.1.40"
+tracing = "0.1.40"
 
+## malachite chain dependencies
+rand = "0.8.5"
+signature = "2.2.0"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+crossbeam-channel = "0.5.13"
+ed25519-consensus = "2.1.0"
+bytes = "1.9.0"
+malachite-core-consensus = {version = "0.0.1", package = "informalsystems-malachitebft-core-consensus"}
+malachite-core-types = {version = "0.0.1", package = "informalsystems-malachitebft-core-types"}
+malachite-metrics = {version = "0.0.1", package = "informalsystems-malachitebft-metrics"}
